--- a/.github/workflows/3_integration_tests,build__JAR_create_publish_Docker_image.yml
+++ b/.github/workflows/3_integration_tests,build__JAR_create_publish_Docker_image.yml
@@ -26,6 +26,12 @@ jobs:
       - name: Run Integration Tests
         run: ./mvnw clean package verify
 
+      - name: Upload artifact for Docker job
+        uses: actions/upload-artifact@v4
+        with:
+          name: java-app
+          path: '${{ github.workspace }}/target/*.jar'
+
   docker:
     runs-on: ubuntu-latest
     needs: maven
